[package]
name = "distributed_queue_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.42.0",features=["full"]}
rocket = {version="0.5.1",features=["tls","json","secrets"]}
serde = {version="1.0.216",features=["derive"]}
thiserror = "2.0.8"
chrono = "0.4.39"
tokio-postgres = {version="0.7.12",features=["with-uuid-1"]}
serde_json = "1.0.134"
dotenv = "0.15.0"
