[package]
name = "enqueue_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
tokio = {version="1.42.0",features=["full"]}
rocket = {version="0.5.1",features=["tls","json","secrets"]}
serde = {version="1.0.216",features=["derive"]}
thiserror = "2.0.8"
chrono = "0.4.39"
serde_json = "1.0.134"
