[package]
name = "enqueue_manager"
version = "0.1.0"
edition = "2021"
authors =["Hayley Dodkins"]

[dependencies]
tokio = {version="1.42.0",features=["full"]}
rocket = {version="0.5.1",features=["tls","json","secrets"]}
serde = {version="1.0.216",features=["derive"]}
chrono = "0.4.39"
serde_json = "1.0.134"
prost = "0.13.4"
tonic = "0.12.3"
log4rs = "1.3.0"
log = "0.4.22"
thiserror = "2.0.9"
anyhow = "1.0.95"
