[package]
name = "queue_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
prost = "0.13.4"
tonic = "0.12.3"

tokio = {version="1.42.0",features=["full"]}
rocket = {version="0.5.1",features=["tls","json","secrets"]}
serde = {version="1.0.216",features=["derive"]}
thiserror = "2.0.8"
chrono = "0.4.39"
tokio-postgres = {version="0.7.12",features=["with-uuid-1"]}
serde_json = "1.0.134"
dotenv = "0.15.0"
log4rs = "1.3.0"
log = "0.4.22"
futures = "0.3.31"

